# PrisonServerEmulator

./: .gitignore  CMakeLists.txt  README.md  build_cmake.bat  build_diag.bat  build_login.bat  run_server.bat  variables_entorno.bat
analysis/: _peekac.py  acc2.py  autoenter.py  autosel.py  availh.py  callerdis.py  callers.py  carcel_strings.txt  carcel_strings_full.txt  chain.py  charcreated.py  charrender.py  charstruct.py  classinfo.py  classinfo2.py  classinfo3.py  classnet.py  connfind.py  crash4fd.py  crash559.py  crashchain.py  crashdis.py  crashdis2.py  crashpatch.py  crashpatch2.py  crashpatch3.py  dbg.py  decomp.py  disasm.py  disasm2.py  disasm3.py  disp3.py  dispatch.py  dispatch2.py  drive.py  driveclass.py  dumpstack.py  findcam.py  findevt.py  findscene.py  (+71 more)
include/prison/: base_datos.hpp  cifrado.hpp  conexion.hpp  configuracion.hpp  estados_cuenta.hpp  monitor.hpp  nombres_objeto.hpp  opcodes.hpp  protocolo_sns.hpp  registro.hpp  servidor_login.hpp  servidor_mundo.hpp  servidor_udp.hpp  servidor_updates.hpp  utilidades.hpp
sql/: 01_schema.sql  02_seed.sql  03_login_states.sql  04_limpieza.sql  05_servidores.sql  06_characters.sql  07_modules.sql  08_reclusos.sql  09_char_module.sql  10_account_activacion.sql  11_delitos.sql  12_habilidades.sql  13_atributos_personaje.sql
src/: base_datos.cpp  cifrado.cpp  configuracion.cpp  diag_capture.cpp  main.cpp  monitor.cpp  protocolo_sns.cpp  registro.cpp  servidor_login.cpp  servidor_mundo.cpp  servidor_udp.cpp  servidor_updates.cpp
